https://github.com/LiveHelperChat/livehelperchat/issues/479
7. Online visitor pages remmebers user settings, selected department, max records to return etc...
https://github.com/LiveHelperChat/livehelperchat/issues/474
8. Core was changed to avoid warning if compiled module file is not found. Actually it's like workraound for OP Cache then file is still returned from OP Cache instead of real one.

execute doc/update_db/update_89.sql for update

2.09v

1. https://github.com/LiveHelperChat/livehelperchat/issues/428
2. Albanian language
3. Chats duration algorithm was changes it now will calculate chat duration by this algorithm
last user message time - (chat start time + chat wait time). You can update all your chats duration by visiting chat Maintenence page.

execute doc/update_db/update_88.sql for update

2.08v

1. https://github.com/LiveHelperChat/livehelperchat/issues/422
2. https://github.com/LiveHelperChat/livehelperchat/issues/454
3. https://github.com/LiveHelperChat/livehelperchat/issues/456

execute doc/update_db/update_87.sql for update

2.07v

1. Now you can generate embed code who represents few departments at once. https://github.com/LiveHelperChat/livehelperchat/issues/427
2. https://github.com/LiveHelperChat/livehelperchat/issues/440
3. https://github.com/LiveHelperChat/livehelperchat/issues/437
4. https://github.com/LiveHelperChat/livehelperchat/issues/433
5. https://github.com/LiveHelperChat/livehelperchat/issues/421
6. Now you can set required phone in proactive chat invitation
7. Option to set required phone length in back office.

execute doc/update_db/update_86.sql for update

2.06v

1. Option to minize widget directly to bottom corner.
2. Status widget will be hidden automatically then user opens live help widget
3. Option to change border color of status widget
4. Operator will see user local time zone. Also visitor will see messages time in their local time.
5. Because of 4 feature online visitors list was a little bit restyled.